--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,8 @@ description = "qlsa forked from ornl"
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
-    "qiskit>2.0,<2.2.0",
+    "qiskit<2.0",
+    "qiskit-algorithms",
     "qiskit-ibm-runtime",
     "qiskit_qasm3_import",
     "qiskit_aer",
