--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,17 +8,23 @@ description = "qlsa forked from ornl"
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
-    "qiskit<2.0",
-    "qiskit-algorithms",
-    "qiskit-ibm-runtime",
-    "qiskit_qasm3_import",
+    # "qiskit>=1.4,<2.0",
+    "qiskit==1.2.4",
+    #"qiskit-aer==0.15.1",
+    "qiskit-algorithms==0.3.1",   
+    "qiskit-ibm-runtime==0.35.0",
+    "qiskit-qasm3-import==0.5.1",
+    #"qiskit-iqm==18.0",
+    #"qiskit-algorithms",
+    #"qiskit-ibm-runtime",
+    #"qiskit_qasm3_import",
     "qiskit_aer",
     "numpy",
     "matplotlib",
     "scipy>=1.15.0,<1.17.0",
     "pyyaml",
-    "quantum_linear_solvers @ https://github.com/jw676/quantum_linear_solvers.git", 
-    # "qiskit-ionq"
+    "quantum_linear_solvers @ git+https://github.com/jw676/quantum_linear_solvers.git@main", 
+    "lwfm @ git+https://github.com/lwfm-proj/lwfm@develop",
 ]
 
 [tool.setuptools]
